--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ html {
   padding: 0 30px;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
   font-size: 18px;
   line-height: 1;
   background-color: #1b1919;
@@ -68,7 +69,7 @@ ol {
 
 .button {
   width: 100%;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   padding: 6px 0;
   color: inherit;
   font-family: inherit;
@@ -89,7 +90,7 @@ ol {
 }
 
 .button:focus-visible {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 1px;
 }
 
@@ -128,21 +129,20 @@ ol {
 
 .search-form__fieldset-title {
   padding-bottom: 6px;
-  font-weight: 400;
+  font-weight: inherit;
   font-size: inherit;
   line-height: 1;
 }
 
 .search-form__textfield {
   width: 225px;
-  height: 27px;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   border-right: none;
   border-left: none;
-  padding: 0;
-  color: #fff;
+  padding: 2px 0;
+  color: currentColor;
   font-family: inherit;
-  font-weight: 400;
+  font-weight: inherit;
   font-size: inherit;
   background-color: transparent;
   appearance: none;
@@ -174,14 +174,14 @@ ol {
 }
 
 .search-form__label:has(:focus-visible) {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 1px;
 }
 
 .search-form__pseudo-checkbox {
   width: 19px;
   height: 19px;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   padding: 1px;
   vertical-align: middle;
 }
@@ -192,7 +192,7 @@ ol {
   width: 100%;
   height: 100%;
   opacity: 0;
-  background-color: #fff;
+  background-color: currentColor;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
@@ -241,11 +241,12 @@ ol {
 }
 
 .content__list-item:has(.content__card-link:focus-visible) {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
 }
 
 .content__card-link {
-  color: #fff;
+  display: block;
+  color: currentColor;
   text-decoration: none;
 }
 
@@ -253,8 +254,16 @@ ol {
   text-decoration: underline;
 }
 
+.content__card-link:active {
+  background-color: #545050;
+}
+
 .content__card-link:focus {
   outline: none;
+}
+
+.content__card-link_current {
+  background-color: #545050;
 }
 
 .content__video-card {
@@ -276,10 +285,6 @@ ol {
   flex-shrink: 1;
   min-width: 100px; /* проблемы со скроллом в FF */
   max-width: 195px;
-}
-
-.content__card-link:active .content__video-card-description-container {
-  background-color: #545050;
 }
 
 .content__video-card-title {
